Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113591

Problem updating QDockWidget's title with translations

    XMLWordPrintable

Details

    • All
    • c153066ba (dev), b9c15d423 (6.5), 78760fd3d (6.6)

    Description

      There seems to be a bug with the function of Qt's QDockwidget class, QWidget::setWindowTitle() when dynamically translating the application. The dock widget does not have the correct translation when it is docked to the main window. However, it has the correct translation when undocked (floating). See the attached screenshots.

      The problem happens when the following conditions are met:

      • Inheritate QDockWidget class into a custom class.
      • Intercepting the language change event (dynamically translate the application in runtime) using the QWidget::changeEvent() in that custom class and call the QWidget::setWindowTitle() function.

      For more informations please see this thread. I attached the sample project I made that can reproduce the bug.

      Attachments

        For Gerrit Dashboard: QTBUG-113591
        # Subject Branch Project Status CR V

        Activity

          People

            axelspoerl Axel Spoerl
            qt-public-name Tanguy Cesaratto
            Jan Arve Jan Arve
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes